Removed fixed size SVG icons. Now the SVG icon is stretched to the size of the parent element

--- a/src/scss/primary-navigation/core/icons/svg.scss
+++ b/src/scss/primary-navigation/core/icons/svg.scss
@@ -23,12 +23,13 @@
   $color: '%23' + color-to-hex($color);
 
   background-repeat: no-repeat;
-  background-image: url("data:image/svg+xml,%3Csvg width='34' height='26' viewBox='0 0 34 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='22' width='34' height='4' fill='#{$color}'/%3E%3Crect y='11' width='34' height='4' fill='#{$color}'/%3E%3Crect width='34' height='4' fill='#{$color}'/%3E%3C/svg%3E");
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 34 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='22' width='34' height='4' fill='#{$color}'/%3E%3Crect y='11' width='34' height='4' fill='#{$color}'/%3E%3Crect width='34' height='4' fill='#{$color}'/%3E%3C/svg%3E");
 
   @if $color-hover {
     $color-hover: '%23' + color-to-hex($color-hover);
     &:hover {
-      background-image: url("data:image/svg+xml,%3Csvg width='34' height='26' viewBox='0 0 34 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='22' width='34' height='4' fill='#{$color-hover}'/%3E%3Crect y='11' width='34' height='4' fill='#{$color-hover}'/%3E%3Crect width='34' height='4' fill='#{$color-hover}'/%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 34 26' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect y='22' width='34' height='4' fill='#{$color-hover}'/%3E%3Crect y='11' width='34' height='4' fill='#{$color-hover}'/%3E%3Crect width='34' height='4' fill='#{$color-hover}'/%3E%3C/svg%3E");
     }
 
   }
@@ -39,12 +40,13 @@
   $color: '%23' + color-to-hex($color);
 
   background-repeat: no-repeat;
-  background-image: url("data:image/svg+xml,%3Csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='3.72792' y='0.899495' width='32' height='4' transform='rotate(45 3.72792 0.899495)' fill='#{$color}'/%3E%3Crect x='0.957062' y='23.5845' width='32' height='4' transform='rotate(-45 0.957062 23.5845)' fill='#{$color}'/%3E%3C/svg%3E");
+  background-position: center;
+  background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='3.72792' y='0.899495' width='32' height='4' transform='rotate(45 3.72792 0.899495)' fill='#{$color}'/%3E%3Crect x='0.957062' y='23.5845' width='32' height='4' transform='rotate(-45 0.957062 23.5845)' fill='#{$color}'/%3E%3C/svg%3E");
 
   @if $color-hover {
     $color-hover: '%23' + color-to-hex($color-hover);
     &:hover {
-      background-image: url("data:image/svg+xml,%3Csvg width='27' height='27' viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='3.72792' y='0.899495' width='32' height='4' transform='rotate(45 3.72792 0.899495)' fill='#{$color-hover}'/%3E%3Crect x='0.957062' y='23.5845' width='32' height='4' transform='rotate(-45 0.957062 23.5845)' fill='#{$color-hover}'/%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 27 27' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Crect x='3.72792' y='0.899495' width='32' height='4' transform='rotate(45 3.72792 0.899495)' fill='#{$color-hover}'/%3E%3Crect x='0.957062' y='23.5845' width='32' height='4' transform='rotate(-45 0.957062 23.5845)' fill='#{$color-hover}'/%3E%3C/svg%3E");
     }
 
   }
